--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^1.8.1",
+    "flowbite-vue": "^0.0.17-next.2",
     "pinia": "^2.1.6",
+    "sass": "^1.66.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
