--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "flowbite": "^1.8.1",
     "flowbite-vue": "^0.0.17-next.2",
+    "json-server": "^0.17.3",
     "pinia": "^2.1.6",
     "sass": "^1.66.1",
     "vue": "^3.3.4",
